argo-apps/projects/infrastructure/awx/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-route
  namespace: awx
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: kong
  tls:
    - secretName: awx-cert
      hosts:
        - awx.apps.k8s.vdude.io
  rules:
    - host: awx.apps.k8s.vdude.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: awx-service
                port:
                  number: 80
